src/objects/Development_Action__c/Development_Action__c.object-meta.xml
<CustomObject>
    <description>Sales Competency, Sales Competency Rating, and Development Action custom objects make up the PMT Sales Competency module for assessing sales employees on selling competencies and identifying growth/development areas.</description>
    <label>Development Action</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Development Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>