src/objects/Development_Action__c/fields/Action_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Action_Accepted__c</fullName>
    <label>Action Accepted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>