src/objects/Development_Action__c/fields/Sales_Competency_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Competency_Assessment__c</fullName>
    <label>Sales Competency Assessment</label>
    <referenceTo>Sales_Competency__c</referenceTo>
    <relationshipLabel>Development Actions</relationshipLabel>
    <relationshipName>Sales_Competency_Development_Actions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>