src/objects/Development_Action__c/fields/Success_Measures__c.field-meta.xml
<CustomField>
    <fullName>Success_Measures__c</fullName>
    <inlineHelpText>State how you will measure your success. Be sure measures are specific.</inlineHelpText>
    <label>Success Measures</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>