src/objects/Development_Action__c/validationRules/Correct_Competency_Selection.validationRule-meta.xml
<ValidationRule>
    <fullName>Correct_Competency_Selection</fullName>
    <active>true</active>
    <description>Restrict user from selecting the wrong Competency</description>
    <errorConditionFormula>((TEXT(Sales_Competency_Assessment__r.Job_Category__c) =&apos;Sales&apos;) &amp;&amp; 
(TEXT(Competency__c)  = &apos;Business Acumen&apos; || 
TEXT(Competency__c)  = &apos;Industry Knowledge&apos;||
TEXT(Competency__c)  = &apos;Customer Engagement&apos; || 
TEXT(Competency__c)  = &apos;Technical Knowledge&apos;|| 
TEXT(Competency__c)  = &apos;Value Proposition&apos; || 
TEXT(Competency__c)  = &apos;Managing Momentum&apos;|| 
TEXT(Competency__c)  = &apos;Organization Agility&apos;||
TEXT(Competency__c)  = &apos;Hires Deploys &amp; Motivates Sales Talent&apos;||
TEXT(Competency__c)  = &apos;Coaches &amp; Develops Sales Talent&apos;||
TEXT(Competency__c)  = &apos;Manages Momentum&apos;||
TEXT(Competency__c)  = &apos;Delivers Results&apos;||
TEXT(Competency__c)  = &apos;Demonstrates Business Acumen&apos;||
TEXT(Competency__c)  = &apos;Effective Sales MOS&apos;)) || 
((TEXT(Sales_Competency_Assessment__r.Job_Category__c) =&apos;Sales Support&apos;) &amp;&amp; 
(TEXT(Competency__c)  = &apos;Opportunity Conversion&apos; || 
TEXT(Competency__c)  = &apos;Account Planning&apos;||
TEXT(Competency__c)  = &apos;Negotiations/Closing&apos; || 
TEXT(Competency__c)  = &apos;Industry/Customer IQ&apos;|| 
TEXT(Competency__c)  = &apos;Value Propositions&apos; || 
TEXT(Competency__c)  = &apos;Driving Momentum&apos;|| 
TEXT(Competency__c)  = &apos;Organizational Agility&apos;||
TEXT(Competency__c)  = &apos;Hires Deploys &amp; Motivates Sales Talent&apos;||
TEXT(Competency__c)  = &apos;Coaches &amp; Develops Sales Talent&apos;||
TEXT(Competency__c)  = &apos;Manages Momentum&apos;||
TEXT(Competency__c)  = &apos;Delivers Results&apos;||
TEXT(Competency__c)  = &apos;Demonstrates Business Acumen&apos;||
TEXT(Competency__c)  = &apos;Effective Sales MOS&apos;)) ||
((TEXT(Sales_Competency_Assessment__r.Job_Category__c) =&apos;Sales Leader&apos;) &amp;&amp; 
(TEXT(Competency__c)  = &apos;Business Acumen&apos; || 
TEXT(Competency__c)  = &apos;Industry Knowledge&apos;||
TEXT(Competency__c)  = &apos;Customer Engagement&apos; || 
TEXT(Competency__c)  = &apos;Technical Knowledge&apos;|| 
TEXT(Competency__c)  = &apos;Value Proposition&apos; || 
TEXT(Competency__c)  = &apos;Managing Momentum&apos;|| 
TEXT(Competency__c)  = &apos;Organization Agility&apos;||
TEXT(Competency__c)  = &apos;Opportunity Conversion&apos; || 
TEXT(Competency__c)  = &apos;Account Planning&apos;||
TEXT(Competency__c)  = &apos;Negotiations/Closing&apos; || 
TEXT(Competency__c)  = &apos;Industry/Customer IQ&apos;|| 
TEXT(Competency__c)  = &apos;Value Propositions&apos; || 
TEXT(Competency__c)  = &apos;Driving Momentum&apos;|| 
TEXT(Competency__c)  = &apos;Organizational Agility&apos;))</errorConditionFormula>
    <errorDisplayField>Competency__c</errorDisplayField>
    <errorMessage>Please do not change the Competency Value</errorMessage>
</ValidationRule>