src/objects/Development_Action__c/validationRules/Followup_Date_be_empty_if_Followup_False.validationRule-meta.xml
<ValidationRule>
    <fullName>Followup_Date_be_empty_if_Followup_False</fullName>
    <active>true</active>
    <errorConditionFormula>Requires_Follow_up__c = false &amp;&amp; NOT(ISBLANK(Follow_Up_Date__c))</errorConditionFormula>
    <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
    <errorMessage>Please remove Follow Up Date if Requires Follow-up is unchecked.</errorMessage>
</ValidationRule>