src/objects/Development_Action__c/validationRules/Followup_Date_req_if_Followup_true.validationRule-meta.xml
<ValidationRule>
    <fullName>Followup_Date_req_if_Followup_true</fullName>
    <active>true</active>
    <errorConditionFormula>Requires_Follow_up__c  = true &amp;&amp; ISBLANK(Follow_Up_Date__c)</errorConditionFormula>
    <errorDisplayField>Follow_Up_Date__c</errorDisplayField>
    <errorMessage>Please enter Follow Up Date if Requires Follow-up is checked</errorMessage>
</ValidationRule>