src/objects/Development_Action__c/validationRules/Prevent_changing_follow_up_data.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_changing_follow_up_data</fullName>
    <active>true</active>
    <errorConditionFormula>( $User.Id =  Sales_Competency_Assessment__r.User__r.Id )  &amp;&amp;

( ISCHANGED( Follow_Up_Date__c ) ||
 ISCHANGED(  Comments__c ) || 
ISCHANGED(  Requires_Follow_up__c  ) 
)</errorConditionFormula>
    <errorDisplayField>Requires_Follow_up__c</errorDisplayField>
    <errorMessage>You may not change your own follow up information.</errorMessage>
</ValidationRule>