src/objects/Development_Action__c/validationRules/Prevent_entering_own_follow_up_data.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_entering_own_follow_up_data</fullName>
    <active>true</active>
    <errorConditionFormula>( $User.Id =  Sales_Competency_Assessment__r.User__r.Id )  &amp;&amp;

 ISNEW() &amp;&amp; 

(
NOT(ISBLANK(  Follow_Up_Date__c  )) ||
 LEN( Comments__c ) &gt; 0  ||
 Requires_Follow_up__c
)</errorConditionFormula>
    <errorDisplayField>Requires_Follow_up__c</errorDisplayField>
    <errorMessage>You may not enter your own follow up information.</errorMessage>
</ValidationRule>