src/objects/Development_Action__c/validationRules/Require_Comments_if_Action_Not_Accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Comments_if_Action_Not_Accepted</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Action_Accepted__c , &quot;No&quot;) &amp;&amp;
Len(Comments__c ) = 0</errorConditionFormula>
    <errorDisplayField>Comments__c</errorDisplayField>
    <errorMessage>Please enter comments if Action is not Accepted.</errorMessage>
</ValidationRule>