src/objects/Development_Action__c/validationRules/Target_Completion_Must_Be_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Target_Completion_Must_Be_in_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Target_Completion_Date__c &lt; Today()  &amp;&amp; ISNEW()</errorConditionFormula>
    <errorDisplayField>Target_Completion_Date__c</errorDisplayField>
    <errorMessage>Target Completion Date must be in the future.</errorMessage>
</ValidationRule>